fix SLF4J-324